# pyspart-test

./: .dockerignore  .env.example  .gitignore  Dockerfile.spark  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260326_000001_create_raw_and_summary_tables.py
app/: main.py
app/api/: dependencies.py  router.py
app/api/routes/: __init__.py  health.py  ingestion.py  kpi.py
app/api/schemas/: __init__.py  health.py  ingestion.py  kpi.py
app/api/services/: __init__.py  health.py  ingestion.py  kpi.py
app/batch/: aggregation.py  cli.py  date_range.py
app/core/: exceptions.py  settings.py  timezone.py
app/db/: __init__.py  models.py  session.py
data/: cart_events.json  orders.json  payments.json  product_views.json  products.json
docs/: scenario-analysis.md  structure.md
grafana/dashboards/: spark-kpi-overview.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
grafana/sql/: 001_create_grafana_readonly_user.sql
scripts/: bootstrap_grafana_readonly_role.py  bootstrap_health_api.py  run_batch.py  seed_data.py  verify_grafana_dashboard.py
tests/api/: test_health.py  test_ingestion.py  test_kpi_read.py
tests/batch/: test_batch_job.py
tests/contracts/: test_kpi_contract.py
tests/e2e/: test_e2e_flow.py
tests/scripts/: test_run_batch_runtime.py
